force-app/src/objects/proh__ProcessingHub_Setting__c.object
<CustomObject>
    <fields>
        <fullName>proh__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>proh__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Expires__c</fullName>
        <label>Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>proh__Group_Id__c</fullName>
        <inlineHelpText>The chatter group ID used in communication with ProcessingHub</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Instance__c</fullName>
        <label>Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Integration_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integration User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProcessingHub_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>proh__Org_ID__c</fullName>
        <label>Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>proh__Return_URL__c</fullName>
        <label>Return URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>proh__Secret_Token__c</fullName>
        <label>Secret Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Token_URL__c</fullName>
        <label>Token URL</label>
        <type>Url</type>
    </fields>
    <label>ProcessingHub Setting</label>
    <listViews>
        <fullName>proh__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProcessingHub Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>